updated after having an internal seminar

--- a/src/demo/src/main/resources/application.properties
+++ b/src/demo/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8080
 # spring.jackson.date-format=com.samsung.sds.demo.api.invoker.RFC3339DateFormat
 # spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
+# Swagger-UI : 라이브러리간 호환성 문제를 해결하기 위해서 들어간 것.
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER 
 
 spring.datasource.url=${EMARKET_SQL_DATA_URL:jdbc:mariadb://localhost:31400/MarketingDb}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8
@@ -28,7 +29,7 @@ keycloak.cors                       = true
 spring.boot.admin.client.url=http://${EMARKET_WEBSTATUS_SERVICE_HOST:localhost}:${WEBSTATUS_SERVICE_PORT:9091}/webstatus
 spring.boot.admin.client.username=${WEBSTATUS_SERVICE_USERNAME:admin}
 spring.boot.admin.client.password=${WEBSTATUS_SERVICE_PASSWORD:admin}
-spring.boot.admin.client.instance.name=basket-api
+spring.boot.admin.client.instance.name=marketing-api2
 spring.boot.admin.client.instance.service-base-url=http://${EMARKET_MY_POD_IP:localhost}:${EMARKET_HTTP_PORT:9091}
 
 # ACTUATOR PROPERTIES
